# modern-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  codecov.yaml  cookiecutter.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  Config.cmake.in  Doxygen.cmake  ProjectNameConfig.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake
include/project/: tmp.hpp
include/tmp/: tmp.h
src/: main.cpp  tmp.cpp
test/: CMakeLists.txt
test/src/: tmp_test.cpp
{{ cookiecutter.project_slug }}/: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.rst  codecov.yaml
{{ cookiecutter.project_slug }}/.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
{{ cookiecutter.project_slug }}/cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake  version.hpp.in
{{ cookiecutter.project_slug }}/docs/: installation.rst
{{ cookiecutter.project_slug }}/docs/html/: CONTRIBUTING_8md.html  PULL__REQUEST__TEMPLATE_8md.html  README_8md.html  dir_000005_000003.html  dir_000007_000003.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_181c00e2b942bc2bd301cc4650f9e5c8.html  dir_1aad2d91dfff86ecf02572432306cc0f.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7440c80a84150c89eded6c163cdc56e5.html  dir_7440c80a84150c89eded6c163cdc56e5_dep.map  dir_7440c80a84150c89eded6c163cdc56e5_dep.md5  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  md_CONTRIBUTING.html  md_PULL_REQUEST_TEMPLATE.html  md_README.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetmp.html  namespacetmp_a4ab809262e3c5f154de7d9bb84cc6efd_icgraph.map  namespacetmp_a4ab809262e3c5f154de7d9bb84cc6efd_icgraph.md5  pages.html  tmp_8cpp.html  tmp_8cpp__incl.map  tmp_8cpp__incl.md5  tmp_8hpp.html  (+10 more)
{{ cookiecutter.project_slug }}/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
{{ cookiecutter.project_slug }}/src/: tmp.cpp
{{ cookiecutter.project_slug }}/test/: CMakeLists.txt
{{ cookiecutter.project_slug }}/test/src/: tmp_test.cpp
